fix: footer overlap with testimonial section

--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -4,6 +4,9 @@ footer {
     padding: 72px 0;
     .row > * {
       width: auto;
+      @include mq("tablet", max) {
+        flex-direction: column;
+      }
     }
     .menu-type {
       font-weight: bold;
